trunk/Archive2/70/89d1dc427f7cab/output
main.cpp:63:46: error: implicit instantiation of undefined template 'boost::fusion::extension::struct_member_name<Bar, 0>'
                        visitor.start_member(name_t::call());
                                             ^
main.cpp:106:61: note: in instantiation of member function 'visitor::detail::iteration::members_impl<DisplayMemberVisitor, Bar, mpl_::int_<0> >::handle' requested here
                iteration::Struct<FusionVisitorConcept, T>::handle(visitor, t);
                                                            ^
main.cpp:155:59: note: in instantiation of member function 'visitor::detail::struct_application<DisplayMemberVisitor, Bar>::handle' requested here
    visitor::VisitorApplication<FusionVisitorConcept, T>::handle(visitor, o);
                                                          ^
main.cpp:193:9: note: in instantiation of function template specialization 'apply_fusion_visitor<DisplayMemberVisitor, Bar>' requested here
        apply_fusion_visitor(vis, b);
        ^
/usr/local/include/boost/fusion/adapted/struct/detail/extension.hpp:44:16: note: template is declared here
        struct struct_member_name;
               ^
main.cpp:65:47: error: implicit instantiation of undefined template 'boost::fusion::extension::struct_member_name<Bar, 0>'
                        visitor.finish_member(name_t::call());
                                              ^
/usr/local/include/boost/fusion/adapted/struct/detail/extension.hpp:44:16: note: template is declared here
        struct struct_member_name;
               ^
main.cpp:63:46: error: implicit instantiation of undefined template 'boost::fusion::extension::struct_member_name<Bar, 1>'
                        visitor.start_member(name_t::call());
                                             ^
main.cpp:66:72: note: in instantiation of member function 'visitor::detail::iteration::members_impl<DisplayMemberVisitor, Bar, mpl_::int_<1> >::handle' requested here
                        members_impl<FusionVisitorConcept, S, next_t>::handle(visitor, s);
                                                                       ^
main.cpp:106:61: note: in instantiation of member function 'visitor::detail::iteration::members_impl<DisplayMemberVisitor, Bar, mpl_::int_<0> >::handle' requested here
                iteration::Struct<FusionVisitorConcept, T>::handle(visitor, t);
                                                            ^
main.cpp:155:59: note: in instantiation of member function 'visitor::detail::struct_application<DisplayMemberVisitor, Bar>::handle' requested here
    visitor::VisitorApplication<FusionVisitorConcept, T>::handle(visitor, o);
                                                          ^
main.cpp:193:9: note: in instantiation of function template specialization 'apply_fusion_visitor<DisplayMemberVisitor, Bar>' requested here
        apply_fusion_visitor(vis, b);
        ^
/usr/local/include/boost/fusion/adapted/struct/detail/extension.hpp:44:16: note: template is declared here
        struct struct_member_name;
               ^
main.cpp:65:47: error: implicit instantiation of undefined template 'boost::fusion::extension::struct_member_name<Bar, 1>'
                        visitor.finish_member(name_t::call());
                                              ^
/usr/local/include/boost/fusion/adapted/struct/detail/extension.hpp:44:16: note: template is declared here
        struct struct_member_name;
               ^
4 errors generated.
